<resources>
    <string name="app_name">Challenge Hiking</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="new_user_sign_up">New User Sign-up</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="view_information">View Information</string>
    <string name="go_on_a_hike">Go on a Hike</string>
    <string name="view_past_hikes">View Past Hikes</string>
    <string name="open_drawer">Open the drawer</string>
    <string name="close_drawer">Close the drawer</string>
    <string name="stats">Hiking Statistics</string>
    <string name="hike_string">Total Hikes: %d</string>
    <string name="challenge_string">Total Challenges: %d</string>
    <string name="miles_hiked_string">Distance on the Trail: %.02f</string>
    <string name="hours_hiked_string">Hours on the Trail: %.02f</string>
    <string name="prev_hike_string">Last hiked at %s</string>
    <string name="empty_prev_loc">Last hiked in a previous life</string>
    <string name="hike_loc_string">From %1$s to %2$s</string>
    <string name="welcome">Welcome!</string>
    <string name="select_menu">Select an item from the menu to get started!</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_password_to_confirm">Enter Password to Confirm</string>
    <string name="logging_out">Logging Out…</string>
    <string name="hiking">Hiking</string>
    <string name="network_selection">Network Location:</string>
    <string name="allow_challenges">Allow Challenges:</string>
    <string name="hiking_activity">Going on a Hike</string>
    <string name="currently_located">Currently Located: %s</string>
    <string name="start">Start</string>
    <string name="challenges_completed">Challenges Completed: %d</string>
    <string name="stop">Stop</string>
    <string name="timer_format_txt">%d:%02d:%02d</string>
    <string name="use_metric_units">Use Metric Units:</string>
    <string name="distance_txt">%.02f %s</string>
</resources>