<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slate_grey">

    <TextView
        style="@style/Theme.ChallengeHiking.FrameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dp"
        android:text="@string/new_user_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email_input"
        android:layout_width="@dimen/input_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_input_dp"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email_confirm_input"
        android:layout_width="@dimen/input_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dp"
        android:hint="@string/confirm_e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_input" />

    <EditText
        android:id="@+id/pwd_signup_input"
        android:layout_width="@dimen/input_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_confirm_input" />

    <EditText
        android:id="@+id/pwd_signup_confirm_input"
        android:layout_width="@dimen/input_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwd_signup_input" />

    <Button
        android:id="@+id/signup_submit_btn"
        android:layout_width="@dimen/btn_wt"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/div_dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwd_signup_confirm_input" />

</androidx.constraintlayout.widget.ConstraintLayout>