<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slate_grey">

    <TextView
        style="@style/Theme.ChallengeHiking.FrameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loc_switch_label"
        style="@style/Theme.ChallengeHiking.FrameBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/std_dp"
        android:layout_marginVertical="@dimen/top_input_dp"
        android:text="@string/network_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/loc_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/std_dp"
        app:layout_constraintBottom_toBottomOf="@id/loc_switch_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/loc_switch_label" />

    <TextView
        android:id="@+id/challenge_switch_label"
        style="@style/Theme.ChallengeHiking.FrameBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dp"
        android:text="@string/allow_challenges"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc_switch_label" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/challenge_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/std_dp"
        app:layout_constraintBottom_toBottomOf="@id/challenge_switch_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/challenge_switch_label" />

    <TextView
        android:id="@+id/unit_switch_label"
        style="@style/Theme.ChallengeHiking.FrameBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dp"
        android:text="@string/use_metric_units"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_switch_label" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/unit_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/std_dp"
        app:layout_constraintBottom_toBottomOf="@id/unit_switch_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/unit_switch_label" />

</androidx.constraintlayout.widget.ConstraintLayout>